--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/app.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    
+    <%- include('../partials/navbar.ejs') %>
+    <% for(let i = 0; i < allMovies.length; i++) { %>
+        <a href="/movies/<%= allMovies[i]._id  %>">
+            <h2><%= allMovies[i].title %></h2>
+        </a>
+        <h2><%=allMovies[i].director%></h2>
+        <form action="/movies/<%= allMovies[i]._id %>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete this movies">
+        </form>
+        <a href="/movies/<%= allMovies[i]._id  %>/edit">Edit this movie</a>
+    <% } %>
 </body>
 </html>
