--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -9,14 +9,14 @@
 <body>
     <h1>Add a new movie to your watchlist</h1>
     <form method="POST" action="/movies">
-        <label for="movie-title">Title:</label>
-        <input type="text" name="movie-title">
+        <label for="title">Title:</label>
+        <input type="text" name="title">
         <br>
-        <label for="movie-director">Director:</label>
-        <input type="text" name="movie-director">
+        <label for="director">Director:</label>
+        <input type="text" name="director">
         <br>
-        <label for="release-date">Release Date:</label>
-        <input type="text" name="release-date">
+        <label for="releaseDate">Release Date:</label>
+        <input type="text" name="releaseDate">
         <br>
         <input type="submit">
     </form>
