search fixed, including up

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,8 +19,8 @@
                   <p>Store your watchlists here.</p>
                   <footer>
                     <form class="d-flex" method="POST" action="/search">
-                        <label for="title"></label>
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="title">
+                        <label for="search"></label>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                   </footer>
