--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -14,14 +14,25 @@
     <%- include('../partials/navbar.ejs') %>
     <% for(let i = 0; i < allMovies.length; i++) { %>
         <a href="/movies/<%= allMovies[i]._id  %>">
-            <h2><%= allMovies[i].title %></h2> 
+            <h2><%= allMovies[i].Title %></h2> 
         </a>
-        <h2><%=allMovies[i].director%></h2>
+        <img src="<%=allMovies[i].Poster%>" alt="">
+
+        <form action="/movies" method="POST">
+            
+            <input type="submit" value="See more details">
+        </form>  
+
         <form action="/movies/<%= allMovies[i]._id %>?_method=DELETE" method="POST">
             <input type="submit" value="Delete this movies">
         </form>
         <a href="/movies/<%= allMovies[i]._id  %>/edit">Edit this movie</a>
+
+        
+
     <% } %>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>   
 </body>
