--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= oneMovie.title %></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <title><%= oneMovie.Title %></title>
 </head>
 <body>
   
     
     <main>
         <%- include('../partials/navbar.ejs') %>
-        <h1> Info page for <%= oneMovie.title%> </h1>
         <section>
-            <h2><%= oneMovie.title %></h2>
+            <h2><%= oneMovie.Title %></h2>
                 <ul>
-                    <li>Title: <%= oneMovie.title %></li>
-                    <li>Director: <%= oneMovie.director %></li>
+                    <li>Title: <%= oneMovie.Title %></li>
+                    <!-- <li>Director: <%= oneMovie.director %></li>
                     <li>Genre: <%= oneMovie.genre %></li>
-                    <li>Actors: <%= oneMovie.actors %></li>
-                    <li>Release Date: <%= oneMovie.releaseDate %></li>
+                    <li>Actors: <%= oneMovie.actors %></li> -->
                 </ul>
+                <img src="<%= oneMovie.Poster %>" alt="">
         </section>
     </main>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script> 
 </body>
 </html>
