--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -11,11 +11,12 @@
 </head>
 
 <body>
+    <%- include('../partials/navbar.ejs') %>
     <h1> Search for movies here</h1>
 
     <form class="d-flex" method="POST" action="/search">
-        <label for="title"></label>
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="title">
+        <label for="search"></label>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 
@@ -25,6 +26,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
         crossorigin="anonymous"></script>
-</body>
 
+</body>
 </html>
