--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -16,13 +16,56 @@
             <h2><%= oneMovie.Title %></h2>
                 <ul>
                     <li>Title: <%= oneMovie.Title %></li>
-                    <!-- <li>Director: <%= oneMovie.director %></li>
-                    <li>Genre: <%= oneMovie.genre %></li>
-                    <li>Actors: <%= oneMovie.actors %></li> -->
+                    <li>Director: <%= oneMovie.Director %></li>
+                    <li>Genre: <%= oneMovie.Genre %></li>
+                    <li>Actors: <%= oneMovie.Actors %></li>
+                    <li>Rotten Tomatoes: <%= oneMovie.Ratings[1].Value %> </li>
+                    <li>
+                        <button type="button" class="collapsible">See More Details</button>
+                        <div class="content">
+                        <ul>
+                            <li>Rated: <%= oneMovie.Rated %> </li>
+                            <li>Year: <%= oneMovie.Released %> </li>
+                            <li>Runtime: <%= oneMovie.Runtime %> </li>
+                            <li>Awards: <%= oneMovie.Awards %> </li>
+                            <li>Country: <%= oneMovie.Country %> </li>
+                            <li>IMDB Rating: <%= oneMovie.Ratings[0].Value %> </li>
+                            <li>Metacritic: <%= oneMovie.Ratings[2].Value %> </li>
+
+
+
+                        </ul>
+                        </div>
+                    </li>
+
                 </ul>
+
+                
                 <img src="<%= oneMovie.Poster %>" alt="">
+
+
+
+            
+
+
+
         </section>
     </main>
+
+
+    <script>
+    let collapse = document.getElementsByClassName("collapsible")
+        for (let i = 0; i < collapse.length; i++) {
+          collapse[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            let content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }</script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
