--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,16 +1,50 @@
+html{overflow-y:scroll; overflow-x:hidden;}
+html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
+/* full width wrapper */
+.wrapper{display:block;position:relative;width:100%;margin:0;padding:0;text-align:left;}
+/* center horizontal */
+.horizontal{display:block;margin:0 auto;}
+/* rows */
+.row0{padding:80px 0 0 0;}
+/* header */
+#header-container{padding:0 15px; border:solid; border-width:1px 0; max-width: 1140px; min-height: 4rem;}
+#header-container #logo{margin:14px 0 0 0;}
+#header-container #logo h1{margin:0; padding:0; font-size:22px; line-height:1; text-transform:uppercase;}
+/* title */
+#pageintro{padding:180px 0}
+#pageintro article{display:block; max-width:60%; margin:0 auto; text-align:center;}
+#pageintro .heading{margin-bottom:20px; font-size:4rem;}
+#pageintro p{max-width:75%; margin:0 auto;}
+#pageintro footer{margin-top:50px;}
+#pageintro footer form{display:block; position:relative; max-width:50%; margin:0 auto; overflow:hidden;}
+#pageintro footer input, #pageintro footer button{display:block; height:44px;}
+#pageintro footer input{width:100%; padding:5px 40px 5px 15px;}
+.btn-outline-success:hover {
+    color: #fff;
+    background-color: gray;
+    border-color: gray;
+}
+.home-search{
+    border-color: gray;
+    color: gray;
+}
+
+.movie-slides-title{display:block; max-width:55%; margin:0 auto;margin-top: 5rem; text-align:center;}
+.movie-slides-title .heading{margin:0; padding:0; line-height:1;}
 .movie-slides-container{
-    align-items: center;
-    max-width: 600px;
-    max-height: 600px;
+    margin:0 auto;
+    position: relative;
+    width: 20%;
+    height: 0;
+    padding-bottom: 20%;
+    
 }
 .bg{
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-div{
-    display:block;
-}
+
 .overlay{
     position: relative;
     z-index: 1;
@@ -18,58 +52,10 @@ div{
 #header-overlay{
     background-image: url(https://www.splitshire.com/wp-content/uploads/2015/04/SplitShire-8881.jpg);
 }
-
-.wrapper{
-    display:block;
-    position:relative;
-    width:100%;
-    margin:0;
-    padding:0;
-    text-align:left;
-    word-wrap:break-word;
-}
-.row1{padding:80px 0 0 0;}
-
-.header-container{
-    border-color: rgba(255,255,255,.2);
-    padding: 0 15px;
-    border: solid;
-    border-width: 1px 0;
-    
-}
-.header-container, .logo{
-    margin: 28px 0 0 0;
-}
-.pageintro{
-    padding:180px 0
-}
-.hoc{
-    display:block;  
-    margin:0 auto;
-    max-width: 1140px;
-}
-
 .fl-right{
     float: right;
 }
 .fl-left{
     float:left;
 }
-article{
-    display: block;
-    max-width: 60%;
-    margin: 0 auto;
-    text-align: center;
-}
 
-.heading{
-    margin-bottom: 20px;
-    font-size: 4rem;
-}
-form {
-    display: block;
-    position: relative;
-    max-width: 50%;
-    margin: 0 auto;
-    overflow: hidden;
-}
