--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,16 +11,16 @@
 </head>
 <body>
   <div class="bg overlay" id="header-overlay">
-    <div class="wrapper row1">
-      <div class="header-container hoc">
-        <div class="logo fl-left">
+    <div class="wrapper row0">
+      <div id="header-container"class="horizontal">
+        <div id="logo" class= "fl-left">
           <h1>Title</h1>
         </div>
         <%- include('./partials/navbar.ejs') %>
       </div>
     </div>
       
-    <div class="pageintro">               
+    <div id="pageintro">               
       <article>
         <h3 class="heading">Movie Watchlists</h3>
         <p>Store your watchlists here.</p>
@@ -35,36 +35,42 @@
     </div>
 
   </div>
-  
+  <div class="wrapper row1">
+    <div class="movie-slides-title">
+      <h5 class="heading">Search any movie you want</h5>
+      <p>Our database is sure to include whatever you're looking for.</p>
+    </div>
     <div class="movie-slides-container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://m.media-amazon.com/images/I/81u17vDIrAL._AC_SS300_.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item ">
-                <img src="https://i.icanvas.com/list-square/japanese-movie-posters-2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item ">
-                <img src="https://cdn.shopify.com/s/files/1/0081/1260/3217/products/1201a23a23a54244b20f8942c45184c5_300x.jpg?v=1588436691" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
-       </div>
-    <div class = "watchlist-container">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://m.media-amazon.com/images/I/81u17vDIrAL._AC_SS300_.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item ">
+              <img src="https://i.icanvas.com/list-square/japanese-movie-posters-2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item ">
+              <img src="https://cdn.shopify.com/s/files/1/0081/1260/3217/products/1201a23a23a54244b20f8942c45184c5_300x.jpg?v=1588436691" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+     </div>
+  </div>
+    
+    <div class = "wrapper row2">
         <div class="row">
             <div class="col-sm-3">
                 <div class="card" style="width: 18rem;">
