--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fl-right">
+<nav class="navbar navbar-expand-lg navbar-light fl-right">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,25 +10,15 @@
             <a class="nav-link active" aria-current="page" href="/movies">View my List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/search">Search</a>
+            <a class="nav-link active" aria-current="page" href="/search">Search</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/search">Test</a>
+            <a class="nav-link active" aria-current="page" href="/search">Test</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/search">Test</a>
+            <a class="nav-link active" aria-current="page" href="/search">Test</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+          
           <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
