--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,13 +2,28 @@
     <div class="container">
     	<div class="row">
             <div class="col-sm-12 footer-social">
-            	<a href="#">fb<i class="facebook"></i></a>
-		    	<a href="#">twitter<i class="twitter"></i></a>            	
-            	<a href="#">insta<i class="instagram"></i></a>
-            	<a href="#">g+<i class="google-plus"></i></a>
-            	<a href="#">pin<i class="pinterest"></i></a>
+            	<a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a>
+				  <a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a><a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a><a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a><a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a><a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a><a href="">
+					<img src="https://www.linuxtechi.com/ezoimgfmt/secure.gravatar.com/avatar/aee3114362d9999a6c9612d041d34f49?s=20&d=mm&r=g&ezimgfmt=rs:20x20/rscb22/ng:webp/ngcb22">
+				  </a>
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-sm-12 footer-social">
+            	Website source code here:<a href="https://github.com/cotsao/project-one-movies">(╯°□°）╯︵ ┻━┻</a>.
+            </div>
+        </div>
     </div>
 </footer>
