--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,20 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/homepage.css">
     <script defer src="js/homepage.js"></script>
     <title>Document</title>
 </head>
 <body>
   <div class="bg overlay" id="header-overlay">
-    <div class="wrapper row0">
-      <div id="header-container"class="horizontal">
-        <div id="logo" class= "fl-left">
-          <h1>Title</h1>
-        </div>
-        <%- include('./partials/navbar.ejs') %>
-      </div>
-    </div>
+    <%- include('./partials/navbar.ejs') %>
       
     <div id="pageintro">               
       <article>
