--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,28 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fl-right">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/movies">View my List</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/search">Search</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/search">Test</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/search">Test</a>
-          </li>
-          
-          <!-- <li class="nav-item">
+<div class="wrapper row0">
+  <div id="header-container" class="horizontal">
+    <div id="logo" class="fl-left">
+      <h1>Title</h1>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fl-right">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/movies">View my List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/search">Search</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/search">Test</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/search">Test</a>
+            </li>
+
+            <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
-        </ul>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
+</div>
