--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -21,7 +21,7 @@
                     <li>Actors: <%= oneMovie.Actors %></li>
                     <li>Rotten Tomatoes: <%= oneMovie.Ratings[1].Value %> </li>
                     <li>
-                        <button type="button" class="collapsible">See More Details</button>
+                        <button type="button" class="collapsible">Details</button>
                         <div class="content">
                         <ul>
                             <li>Rated: <%= oneMovie.Rated %> </li>
