--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -52,6 +52,7 @@
               <img src="<%= oneMovie.Poster %>" alt="">
           </div>
           <div class="content-container">
+              <div class="plot"><%=oneMovie.Plot%></div>
               <div>Genre: <%= oneMovie.Genre %></div>
               <div>Director: <%= oneMovie.Director %></div>
               <div>Writer: <%=oneMovie.Writer%></div>
