--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,3 +1,47 @@
-body{
+.title-header{
+    margin:0 auto;
+    display:flex;
+    width: 60%;
+    align-content: space-between;
+
+}
+.left-box{
+    display: flex;
+flex-direction: column;
+width: 100%;
+margin-top: 1.5rem;
+margin-bottom: 1rem;
+margin-right: 1.5rem;
+}
+.right-box{
+display: flex;
+width: 40%;
+flex-direction: row;
+align-items: center;
+justify-content: space-between;
+-moz-box-pack: end;
+text-align: center;
+-moz-box-flex: 0;
+flex-grow: 0;
+margin-top: 1.5rem;
+margin-bottom: 1rem;
+}
+.left-col .center-col .right-col{
+    box-sizing: border-box;
+    max-width:33%;
+    align-content: space-between;
     
+}
+.poster-container{
+    margin:0 auto;
+    display:flex;
+    width: 60%;
+    align-content: space-between;
+}
+.content-container{
+    margin:20px auto;
+    display:flex;
+    width: 60%;
+    align-content: space-between;
+    flex-direction: column;
 }
