--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -49,11 +49,63 @@
               </div>
           </div>
           <div class="poster-container">
-              <img src="<%= oneMovie.Poster %>" alt="">
+              <img class="poster" src="<%= oneMovie.Poster %>" alt="">
+              <div id="player"></div>
+
+              <script>
+                // 2. This code loads the IFrame Player API code asynchronously.
+                var tag = document.createElement('script');
+          
+                tag.src = "https://www.youtube.com/iframe_api";
+                var firstScriptTag = document.getElementsByTagName('script')[0];
+                firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+          
+                // 3. This function creates an <iframe> (and YouTube player)
+                //    after the API code downloads.
+                var player;
+                function onYouTubeIframeAPIReady() {
+                  player = new YT.Player('player', {
+                    height: '390',
+                    width: '640',
+                    videoId: 'M7lc1UVf-VE',
+                    playerVars: {
+                      'playsinline': 1
+                    },
+                    events: {
+                      'onReady': onPlayerReady,
+                      'onStateChange': onPlayerStateChange
+                    }
+                  });
+                }
+          
+                // 4. The API will call this function when the video player is ready.
+                function onPlayerReady(event) {
+                  event.target.playVideo();
+                }
+          
+                // 5. The API calls this function when the player's state changes.
+                //    The function indicates that when playing a video (state=1),
+                //    the player should play for six seconds and then stop.
+                var done = false;
+                function onPlayerStateChange(event) {
+                  if (event.data == YT.PlayerState.PLAYING && !done) {
+                    setTimeout(stopVideo, 6000);
+                    done = true;
+                  }
+                }
+                function stopVideo() {
+                  player.stopVideo();
+                }
+              </script>
+          
           </div>
           <div class="content-container">
-              <div class="plot"><%=oneMovie.Plot%></div>
-              <div>Genre: <%= oneMovie.Genre %></div>
+            <div> <%let arr = oneMovie.Genre.split(",")%>
+              <%for(let i =0; i<arr.length;i++){%>
+                <span class="genre-<%=i%>"> | <%=arr[i]%> |</span>
+           <% }%>
+              </div>
+              <div class="plot"><%=oneMovie.Plot%></div>              
               <div>Director: <%= oneMovie.Director %></div>
               <div>Writer: <%=oneMovie.Writer%></div>
               <div>Actors: <%= oneMovie.Actors %></div>
