--- a/public/css/show.css
+++ b/public/css/show.css
@@ -37,9 +37,24 @@ margin-bottom: 1rem;
     display:flex;
     width: 60%;
     align-content: space-between;
+    justify-content: space-between;
+    position: relative;
 }
 .poster{
-    height:390px;
+    width:33%;
+    margin-right: 20px;
+}
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .content-container{
     margin:20px auto;
