--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -14,42 +14,6 @@
   </title>
 </head>
 <body>
-<<<<<<< HEAD
-  
-    
-    <main>
-        <%- include('../partials/navbar.ejs') %>
-        <section>
-            <h2><%= oneMovie.Title %></h2>
-                <ul>
-                    <li>Title: <%= oneMovie.Title %></li>
-                    <li>Director: <%= oneMovie.Director %></li>
-                    <li>Genre: <%= oneMovie.Genre %></li>
-                    <li>Actors: <%= oneMovie.Actors %></li>
-                    <li>Rotten Tomatoes: <%= oneMovie.Ratings[1].Value %> </li>
-                    <li>
-                        <button type="button" class="collapsible">Details</button>
-                        <div class="content">
-                        <ul>
-                            <li>Rated: <%= oneMovie.Rated %> </li>
-                            <li>Year: <%= oneMovie.Released %> </li>
-                            <li>Runtime: <%= oneMovie.Runtime %> </li>
-                            <li>Awards: <%= oneMovie.Awards %> </li>
-                            <li>Country: <%= oneMovie.Country %> </li>
-                            <li>IMDB Rating: <%= oneMovie.Ratings[0].Value %> </li>
-                            <li>Metacritic: <%= oneMovie.Ratings[2].Value %> </li>
-
-
-
-                        </ul>
-                        </div>
-                    </li>
-
-                </ul>
-
-                
-                <img src="<%= oneMovie.Poster %>" alt="">
-=======
   <main>
     <%- include('../partials/navbar.ejs') %>
     <section>
@@ -85,54 +49,11 @@
               </div>
           </div>
           <div class="poster-container">
-              <img class="poster" src="<%= oneMovie.Poster %>" alt="">
-              <div id="player"></div>
-
-              <script>
-                // 2. This code loads the IFrame Player API code asynchronously.
-                var tag = document.createElement('script');
-          
-                tag.src = "https://www.youtube.com/iframe_api";
-                var firstScriptTag = document.getElementsByTagName('script')[0];
-                firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-          
-                // 3. This function creates an <iframe> (and YouTube player)
-                //    after the API code downloads.
-                var player;
-                function onYouTubeIframeAPIReady() {
-                  player = new YT.Player('player', {
-                    height: '390',
-                    width: '640',
-                    videoId: 'M7lc1UVf-VE',
-                    playerVars: {
-                      'playsinline': 1
-                    },
-                    events: {
-                      'onReady': onPlayerReady,
-                      'onStateChange': onPlayerStateChange
-                    }
-                  });
-                }
-          
-                // 4. The API will call this function when the video player is ready.
-                function onPlayerReady(event) {
-                  event.target.playVideo();
-                }
-          
-                // 5. The API calls this function when the player's state changes.
-                //    The function indicates that when playing a video (state=1),
-                //    the player should play for six seconds and then stop.
-                var done = false;
-                function onPlayerStateChange(event) {
-                  if (event.data == YT.PlayerState.PLAYING && !done) {
-                    setTimeout(stopVideo, 6000);
-                    done = true;
-                  }
-                }
-                function stopVideo() {
-                  player.stopVideo();
-                }
-              </script>
+              <img class="poster rounded" src="<%= oneMovie.Poster %>" alt="">
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/<%=ytID%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              
           
           </div>
           <div class="content-container">
@@ -182,7 +103,6 @@
       </div>
     </li>
   </ul> -->
->>>>>>> df2b46244c9fcb503945f250cf9f9fc6eab6bc96
 
   </main>
 
