added homepage example movies fn

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -71,51 +71,71 @@
         </div>
         <div class="img-grid">
           <div class="row">
+
             <div class="col-md-4">
               <div class="thumbnail">
                   <img src= <%=exampleMovies[0].Poster %> class="img-rounded rounded">
                   <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[0].Title%> ">
                     <input type="submit" value="Add to Watchlist">
                   </form>
               </div>
             </div>
+
             <div class="col-md-4">
               <div class="thumbnail">
-                <a href="">
-                  <img src="https://via.placeholder.com/150" class="img-rounded rounded">
-                </a>
+                  <img src= <%=exampleMovies[1].Poster %> class="img-rounded rounded">
+                  <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[1].Title%> ">
+                    <input type="submit" value="Add to Watchlist">
+                  </form>
               </div>
             </div>
+
             <div class="col-md-4">
               <div class="thumbnail">
-                <a href="">
-                  <img src="https://via.placeholder.com/150" class="img-rounded rounded">
-                </a>
+                  <img src= <%=exampleMovies[2].Poster %> class="img-rounded rounded">
+                  <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[2].Title%> ">
+                    <input type="submit" value="Add to Watchlist">
+                  </form>
               </div>
             </div>
+
           </div>
+
           <div class="row top-buffer">
+
             <div class="col-md-4">
               <div class="thumbnail">
-                <a href="">
-                  <img src= <%= exampleMovies[0].Poster %>  class="img-rounded rounded">
-                </a>
+                  <img src= <%=exampleMovies[3].Poster %> class="img-rounded rounded">
+                  <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[3].Title%> ">
+                    <input type="submit" value="Add to Watchlist">
+                  </form>
               </div>
             </div>
+
             <div class="col-md-4">
               <div class="thumbnail">
-                <a href="">
-                  <img src="https://via.placeholder.com/150" class="img-rounded rounded">
-                </a>
+                  <img src= <%=exampleMovies[4].Poster %> class="img-rounded rounded">
+                  <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[4].Title%> ">
+                    <input type="submit" value="Add to Watchlist">
+                  </form>
               </div>
             </div>
+
             <div class="col-md-4">
               <div class="thumbnail">
-                <a href="">
-                  <img src="https://via.placeholder.com/150" class="img-rounded rounded">
-                </a>
+                  <img src= <%=exampleMovies[5].Poster %> class="img-rounded rounded">
+                  <form action="/movies" method="post">
+                    <input type="hidden"  name = "Title" value = "<%=exampleMovies[5].Title%> ">
+                    <input type="submit" value="Add to Watchlist">
+                  </form>
               </div>
             </div>
+
           </div>
         </div>
         <div class="footer-search">
